k8s/recommendation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation
  namespace: movies-platform
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: recommendation
