k8s/ingress.yaml
# k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-platform-ingress
  namespace: movies-platform
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: recommendation.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
